# research-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_initial_schema.py
backend/app/: cli.py  main.py
backend/app/adapters/email/: __init__.py  zoho_smtp.py
backend/app/adapters/llm/: __init__.py  openai_compat.py
backend/app/adapters/search/: __init__.py  base.py  brave.py  tavily.py
backend/app/agent/: graph.py  runner.py  state.py
backend/app/agent/nodes/: dedup.py  deliver.py  enrich.py  plan.py  render_pdf.py  research.py  synthesize.py  write.py
backend/app/agent/prompts/: plan.j2  synthesize.j2  write.j2
backend/app/api/: deps.py
backend/app/api/routes/: configs.py  health.py  reports.py  runs.py  ws.py
backend/app/core/: config.py  events.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  coverage.py  report_config.py  run.py  run_event.py
backend/app/pdf/templates/: linkedin_carousel.html  styles.css
backend/app/scheduler/: jobs.py  service.py
backend/app/schemas/: config.py  event.py  llm_config.py  run.py
backend/app/seed/: configs.json  loader.py
backend/app/services/: config_service.py  coverage_service.py  run_service.py
backend/tests/unit/: test_health.py
docs/: architecture.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/nginx/: default.conf
frontend/scripts/: make-icons.mjs
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts  configs.ts  runs.ts  ws.ts
frontend/src/components/: ConnectionBadge.tsx  CronBuilder.tsx  EventLogPane.tsx  Layout.tsx  PdfPreview.tsx  RunTimeline.tsx
frontend/src/hooks/: useRuns.ts  (+2 more)
planning-docs/: market-insights-architecture.md
(+14 files in other folders)
