[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-insights"
version = "0.1.0"
description = "Daily autonomous research agent that produces LinkedIn-shareable PDFs."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32",
    "langgraph>=0.6,<0.7",
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary,pool]>=3.2",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "apscheduler>=3.10,<4.0",
    "weasyprint>=63",
    "jinja2>=3.1",
    "aiosmtplib>=3.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "tenacity>=9.0",
    "redis>=5.1",
    "email-validator>=2.1",
    "python-multipart>=0.0.12",
    "orjson>=3.10",
    "typer>=0.12",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
market-insights = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
